--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<html>
+    <head>
+        <title>Travel Blog</title>
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link href="style.css" rel="stylesheet">
+    </head>
+    <body>
+      <div id="root"></div>
+      <script src="index.pack.js"></script>
+        <!-- <header>
+            <h1>Jas Travel Blog 2022</h1>
+        </header> -->
+        <!-- <main>
+            <div class="day">
+                <h3>Monday, January 3</h3>
+                <p>Drove from Dasmarinas to Subic Bay. The drive was really scenic, the highway roads were new, and there weren't many cars on the road. When we go to the condotel, we realized our front left tire was flat. We unpacked the car, unpacked our things in the condotel, replaced the flat tire with a spare, went grocery shopping, did laundry, and cooked dinner. We made an build your own korean kimbap handrolls board - it was delicious!</p>
+                <img href="./images/010322.png" alt="view from Chequere Suites balcony">
+            </div>
+            <div class="day">
+                <h3>Tuesday, Jaunary 4</h3>
+                <p>Went to New Subic Public Market to get groceries. The market was big, clean, and not too crowded. Was a pleasant market experience. Got lunch at 2 and 2 on the way back to Chequere Suites. Had bulalo and mang shakes on the beach. Before dinner, we took a walk to the beach and explored the duty free supermarket. Had leftover bulalo for dinner and paired it with a crab meat salad.</p>
+                <img href="images/010422.png" alt="subic market vegetable stand">
+            </div>
+            <div class="day">
+                <h3>Wednesday, January 5</h3>
+                <p>Started off the morning with a walk to the beach while listening to Cover Story podcast. Did pilates on the balcony. Spent the day catching up with work and learning react. Went to the duty free supermarket across the street to load up on snacks. Jesse made kimich jigae for dinner.</p>
+                <img href="images/010522.png" alt="snack haul from duty free supermarket">
+            </div>
+            <div class="day">
+                <h3>Thursday, January 5</h3>
+                <p>Went to Pamulaklakin Trail this morning and had a mini jungle tour with Anthony. Learned about trees/plants that help with kidney stones and UTIS, (goo goo) soap/shampoo, water source, and a healing ointment. Had a nice breakfast in the river with oatmeal and bananas brought from the condotel. Walked to the mall to find pastries and stumbled upon Red Ribbon and picked out ensymada. Went to the grocery store at the mall to get ingredients for dinner - penne, tomato sauce, meatless meatballs, and broccoli.</p>
+                <img href="images/010622.png" alt="oatmeal breakfast in the river on Pamulaklakin Trail">
+            </div>
+        </main>
+        <footer></footer> -->
+    </body>
 </html>
